labs/module3_session12_api_design/step11_create_deployment.yaml
apiVersion: apps/v1
kind: Deployment
namespace: product
metadata:
  labels:
    io.kompose.service: product-api
  name: product-api
spec:
  replicas: 2
  selector:
    matchLabels:
      io.kompose.service: product-api
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.service: product-api
    spec:
      containers:
        - image: mohanraz81/product-proxy
          name: product-proxy
          ports:
            - containerPort: 80
          resources: {}
        - env:
            - name: AWS_REGION
              value: us-east-1
            - name: TABLE_NAME
              value: productdb
          image: mohanraz81/product-api
          name: product-api
          resources: {}
      restartPolicy: Always
status: {}
