labs/module3_session12_api_design/step12_create_service.yaml
apiVersion: v1
kind: Service
namespace: product
metadata:
  labels:
    io.kompose.service: product-proxy
  name: product-api
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    io.kompose.service: product-api
  type: LoadBalancer
status:
  loadBalancer: {}
