labs/module3_session12_api_design/step13_create_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
namespace: product
metadata:
  name: product-ingress
spec:
  ingressClassName: nginx-example
  rules:
  - http:
      paths:
      - path: /product/v1
        pathType: Prefix
        backend:
          service:
            name: product-api
            port:
              number: 80
